| Bug #14673 | Partitions: Wrong InnoDB default row format | ||
|---|---|---|---|
| Submitted: | 5 Nov 2005 22:33 | Modified: | 14 Mar 2006 19:48 |
| Reporter: | John David Duncan | ||
| Status: | Closed | ||
| Category: | Server: Partition | Severity: | S3 (Non-critical) |
| Version: | 5.1 | OS: | Linux (linux) |
| Assigned to: | Jim Winstead | Target Version: | |
[5 Nov 2005 22:33]
John David Duncan
[8 Mar 2006 18:58]
Jim Winstead
This is almost certainly just a reporting issue -- all partitioned tables are reported as using the 'Fixed' row format, because the partition handler doesn't report a row format. The same is probably true for the average row length.
[8 Mar 2006 19:59]
Jim Winstead
The average row length is reported as 8192 for an empty partitioned InnoDB table because partitioning always reports of at least 2 rows in the table (for the optimizer's benefit, I believe). It should be more accurate with actual data in the table.
[8 Mar 2006 20:02]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/3600
[13 Mar 2006 20:05]
Jim Winstead
Fixed in 5.1.8.
