Bug #14673: Wrong InnoDB default row format   Make partitioned tables report the row format of the underlying   tables (when they are all the same).